@@ -1,7 +1,7 @@
 package com.example.springframework;
 
 
-import java.lang.reflect.Proxy;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -25,14 +25,20 @@ public class BeanFactoryImpl implements BeanFactory {
         Object controller = null;
         for (Class<?> claz : clazz)
         if (claz.isInterface()) {
+            ;
             name = claz.getSimpleName();
+
 
         }else {
             try {
-                controller = claz.newInstance();
+                controller = claz.getDeclaredConstructor().newInstance();
             } catch (InstantiationException e) {
                 throw new RuntimeException(e);
             } catch (IllegalAccessException e) {
+                throw new RuntimeException(e);
+            } catch (NoSuchMethodException e) {
+                throw new RuntimeException(e);
+            } catch (InvocationTargetException e) {
                 throw new RuntimeException(e);
             }
         }
